--- a/final.ipynb
+++ b/final.ipynb
@@ -61,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dorgerp\\AppData\\Local\\Temp\\ipykernel_32008\\1394564212.py:1: DtypeWarning: Columns (15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\dorgerp\\AppData\\Local\\Temp\\ipykernel_34456\\1394564212.py:1: DtypeWarning: Columns (15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('Games.csv')\n"
      ]
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "b386da5f",
    "metadata": {},
    "outputs": [
@@ -483,143 +483,143 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6996</th>\n",
-       "      <td>Charlotte Hornets</td>\n",
-       "      <td>1610612766</td>\n",
-       "      <td>Chicago Bulls</td>\n",
-       "      <td>1610612741</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>-2.3</td>\n",
-       "      <td>-2.7</td>\n",
-       "      <td>-0.013</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>-0.008</td>\n",
-       "      <td>-0.011</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>0.013</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>-3.2</td>\n",
-       "      <td>-1.2</td>\n",
-       "      <td>-0.080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6997</th>\n",
+       "      <th>9456</th>\n",
        "      <td>Indiana Pacers</td>\n",
        "      <td>1610612754</td>\n",
-       "      <td>Detroit Pistons</td>\n",
-       "      <td>1610612765</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>0.017</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.064</td>\n",
-       "      <td>0.004</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>-1.8</td>\n",
-       "      <td>-2.6</td>\n",
-       "      <td>-0.024</td>\n",
-       "      <td>-0.030</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6998</th>\n",
-       "      <td>Orlando Magic</td>\n",
-       "      <td>1610612753</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>-1.2</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>-0.014</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>-0.009</td>\n",
-       "      <td>-0.016</td>\n",
-       "      <td>-3.1</td>\n",
-       "      <td>-2.3</td>\n",
-       "      <td>0.026</td>\n",
-       "      <td>-0.025</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6999</th>\n",
-       "      <td>Los Angeles Clippers</td>\n",
-       "      <td>1610612746</td>\n",
-       "      <td>Los Angeles Lakers</td>\n",
-       "      <td>1610612747</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>-0.7</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>-0.014</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.017</td>\n",
-       "      <td>0.004</td>\n",
-       "      <td>-0.007</td>\n",
-       "      <td>-0.7</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.032</td>\n",
-       "      <td>-0.009</td>\n",
-       "      <td>-1.9</td>\n",
-       "      <td>-1.2</td>\n",
-       "      <td>0.001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7000</th>\n",
-       "      <td>Toronto Raptors</td>\n",
-       "      <td>1610612761</td>\n",
-       "      <td>New Orleans Pelicans</td>\n",
-       "      <td>1610612740</td>\n",
+       "      <td>Brooklyn Nets</td>\n",
+       "      <td>1610612751</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.7</td>\n",
-       "      <td>-2.4</td>\n",
-       "      <td>-3.7</td>\n",
-       "      <td>-0.007</td>\n",
+       "      <td>-1.2</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>0.031</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.018</td>\n",
+       "      <td>-0.127</td>\n",
        "      <td>0.006</td>\n",
-       "      <td>-0.003</td>\n",
+       "      <td>0.011</td>\n",
+       "      <td>-1.3</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>-0.028</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>3.2</td>\n",
        "      <td>-0.8</td>\n",
-       "      <td>-2.9</td>\n",
-       "      <td>0.024</td>\n",
-       "      <td>-0.030</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>-1.1</td>\n",
+       "      <td>-0.027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9457</th>\n",
+       "      <td>Orlando Magic</td>\n",
+       "      <td>1610612753</td>\n",
+       "      <td>Miami Heat</td>\n",
+       "      <td>1610612748</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-2.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>-0.003</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.016</td>\n",
+       "      <td>-0.006</td>\n",
+       "      <td>-0.008</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>0.007</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>-3.4</td>\n",
+       "      <td>-0.028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9458</th>\n",
+       "      <td>Washington Wizards</td>\n",
+       "      <td>1610612764</td>\n",
+       "      <td>Philadelphia 76ers</td>\n",
+       "      <td>1610612755</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>-0.9</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-0.005</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.034</td>\n",
+       "      <td>-0.008</td>\n",
        "      <td>-0.010</td>\n",
+       "      <td>-1.3</td>\n",
+       "      <td>-1.8</td>\n",
+       "      <td>-0.002</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>-0.006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9459</th>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>Houston Rockets</td>\n",
+       "      <td>1610612745</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.043</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.163</td>\n",
+       "      <td>0.013</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>-0.038</td>\n",
+       "      <td>-0.017</td>\n",
+       "      <td>-0.8</td>\n",
+       "      <td>-3.6</td>\n",
+       "      <td>0.015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9460</th>\n",
+       "      <td>Cleveland Cavaliers</td>\n",
+       "      <td>1610612739</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>1610612738</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.9</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>0.026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>0.032</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>-1.4</td>\n",
+       "      <td>0.026</td>\n",
+       "      <td>0.045</td>\n",
+       "      <td>-0.8</td>\n",
+       "      <td>-1.1</td>\n",
+       "      <td>-0.025</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7001 rows × 73 columns</p>\n",
+       "<p>9461 rows × 73 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   hometeam  hometeamId              awayteam  awayteamId  \\\n",
-       "0                Miami Heat  1610612748    Philadelphia 76ers  1610612755   \n",
-       "1           Detroit Pistons  1610612765      Sacramento Kings  1610612758   \n",
-       "2     Golden State Warriors  1610612744       Houston Rockets  1610612745   \n",
-       "3            Denver Nuggets  1610612743        Indiana Pacers  1610612754   \n",
-       "4           New York Knicks  1610612752          Phoenix Suns  1610612756   \n",
-       "...                     ...         ...                   ...         ...   \n",
-       "6996      Charlotte Hornets  1610612766         Chicago Bulls  1610612741   \n",
-       "6997         Indiana Pacers  1610612754       Detroit Pistons  1610612765   \n",
-       "6998          Orlando Magic  1610612753   Cleveland Cavaliers  1610612739   \n",
-       "6999   Los Angeles Clippers  1610612746    Los Angeles Lakers  1610612747   \n",
-       "7000        Toronto Raptors  1610612761  New Orleans Pelicans  1610612740   \n",
+       "                   hometeam  hometeamId            awayteam  awayteamId  \\\n",
+       "0                Miami Heat  1610612748  Philadelphia 76ers  1610612755   \n",
+       "1           Detroit Pistons  1610612765    Sacramento Kings  1610612758   \n",
+       "2     Golden State Warriors  1610612744     Houston Rockets  1610612745   \n",
+       "3            Denver Nuggets  1610612743      Indiana Pacers  1610612754   \n",
+       "4           New York Knicks  1610612752        Phoenix Suns  1610612756   \n",
+       "...                     ...         ...                 ...         ...   \n",
+       "9456         Indiana Pacers  1610612754       Brooklyn Nets  1610612751   \n",
+       "9457          Orlando Magic  1610612753          Miami Heat  1610612748   \n",
+       "9458     Washington Wizards  1610612764  Philadelphia 76ers  1610612755   \n",
+       "9459  Golden State Warriors  1610612744     Houston Rockets  1610612745   \n",
+       "9460    Cleveland Cavaliers  1610612739      Boston Celtics  1610612738   \n",
        "\n",
        "      homeWin    G   MP   FG  FGA    FG%  ...   3PAr    TS%  OFF_eFG%  \\\n",
        "0           1  0.0  1.6  0.4 -0.6  0.008  ...  0.007  0.010     0.014   \n",
@@ -628,11 +628,11 @@
        "3           0  1.0  0.6  1.8  0.9  0.015  ... -0.045  0.006     0.008   \n",
        "4           1  0.0  0.3  2.2  2.9  0.009  ... -0.057 -0.006    -0.004   \n",
        "...       ...  ...  ...  ...  ...    ...  ...    ...    ...       ...   \n",
-       "6996        1  0.0  1.1 -2.3 -2.7 -0.013  ...  0.003 -0.008    -0.011   \n",
-       "6997        0  7.0 -0.5  2.8  2.8  0.017  ... -0.064  0.004     0.005   \n",
-       "6998        1  8.0 -1.2 -1.0  0.7 -0.014  ...  0.002 -0.009    -0.016   \n",
-       "6999        1  1.0  0.7 -0.7  0.9 -0.014  ...  0.017  0.004    -0.007   \n",
-       "7000        1  0.0 -0.7 -2.4 -3.7 -0.007  ...  0.018  0.006    -0.003   \n",
+       "9456        1  0.0 -1.2  2.6 -0.4  0.031  ... -0.127  0.006     0.011   \n",
+       "9457        1  0.0 -2.4  0.0  0.6 -0.003  ... -0.016 -0.006    -0.008   \n",
+       "9458        1  0.0  0.9 -0.9 -1.0 -0.005  ... -0.034 -0.008    -0.010   \n",
+       "9459        0  0.0 -0.3  4.1  0.9  0.043  ... -0.163  0.013     0.018   \n",
+       "9460        1  0.0 -0.9  2.1 -0.3  0.026  ...  0.022  0.032     0.029   \n",
        "\n",
        "      OFF_TOV%  OFF_ORB%  OFF_FT/FGA  DFF_eFG%  DFF_TOV%  DFF_DRB%  DFF_FT/FGA  \n",
        "0          0.4      -1.1      -0.015    -0.031      -1.8       3.8      -0.036  \n",
@@ -641,16 +641,16 @@
        "3          0.8       5.7       0.008    -0.005      -1.8       0.1      -0.018  \n",
        "4         -0.9       3.3      -0.012    -0.004       2.2       0.3      -0.018  \n",
        "...        ...       ...         ...       ...       ...       ...         ...  \n",
-       "6996      -0.4       1.1       0.013     0.000      -3.2      -1.2      -0.080  \n",
-       "6997      -1.8      -2.6      -0.024    -0.030       0.3       0.8       0.006  \n",
-       "6998      -3.1      -2.3       0.026    -0.025       1.5       1.7       0.012  \n",
-       "6999      -0.7      -1.0       0.032    -0.009      -1.9      -1.2       0.001  \n",
-       "7000      -0.8      -2.9       0.024    -0.030       2.2      -1.1      -0.010  \n",
+       "9456      -1.3       1.7      -0.028     0.010       3.2      -0.8      -0.027  \n",
+       "9457       0.0      -1.5       0.007     0.018      -0.3      -3.4      -0.028  \n",
+       "9458      -1.3      -1.8      -0.002     0.030       1.0      -1.5      -0.006  \n",
+       "9459       1.4      -0.3      -0.038    -0.017      -0.8      -3.6       0.015  \n",
+       "9460      -0.4      -1.4       0.026     0.045      -0.8      -1.1      -0.025  \n",
        "\n",
-       "[7001 rows x 73 columns]"
+       "[9461 rows x 73 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
     "\n",
     "  return pd.concat(log_list, ignore_index=True)\n",
     "\n",
-    "get_logs(19, 24)"
+    "get_logs(17, 24)"
    ]
   }
  ],
